feat: enhance FolderController with HATEOAS support and additional folder management methods