@@ -1,5 +1,7 @@
 package se.kaninis.filemanager.folders;
 
+import org.springframework.hateoas.Link;
+import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.oauth2.core.user.OAuth2User;
@@ -9,7 +11,11 @@ import se.kaninis.filemanager.users.UserService;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+/**
+ * Controller för hantering av mappar i systemet.
+ */
 @RestController
 @RequestMapping("/api/folders")
 public class FolderController {
@@ -22,6 +28,13 @@ public class FolderController {
         this.userService = userService;
     }
 
+    /**
+     * Skapar en ny mapp kopplad till den inloggade användaren.
+     *
+     * @param name Mappens namn.
+     * @param authUser Den inloggade användaren.
+     * @return ResponseEntity med den skapade mappen och en HATEOAS-länk.
+     */
     @PostMapping("/create")
     public ResponseEntity<?> createFolder(@RequestParam String name,
                                           @AuthenticationPrincipal OAuth2User authUser) {
@@ -31,16 +44,23 @@ public class FolderController {
 
         String username = authUser.getAttribute("name");
         Optional<UserEntity> userOpt = userService.findByUsername(username);
-
         if (userOpt.isEmpty()) {
             return ResponseEntity.status(404).body("Användare ej hittad.");
         }
 
-        UserEntity user = userOpt.get();
-        FolderEntity folder = folderService.createFolder(name, user);
-        return ResponseEntity.ok(folder);
+        FolderEntity folder = folderService.createFolder(name, userOpt.get());
+        Link selfLink = WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(FolderController.class)
+                .getFolder(folder.getId(), authUser)).withSelfRel();
+
+        return ResponseEntity.ok().body(folder).header("Link", selfLink.toUri().toString());
     }
 
+    /**
+     * Hämtar alla mappar kopplade till den inloggade användaren.
+     *
+     * @param authUser Den inloggade användaren.
+     * @return ResponseEntity med lista över mappar och HATEOAS-länkar.
+     */
     @GetMapping
     public ResponseEntity<?> getAllFolders(@AuthenticationPrincipal OAuth2User authUser) {
         if (authUser == null) {
@@ -49,13 +69,66 @@ public class FolderController {
 
         String username = authUser.getAttribute("name");
         Optional<UserEntity> userOpt = userService.findByUsername(username);
-
         if (userOpt.isEmpty()) {
             return ResponseEntity.status(404).body("Användare ej hittad.");
         }
 
-        UserEntity user = userOpt.get();
-        List<FolderEntity> folders = folderService.getAllFolders(user).toList();
-        return ResponseEntity.ok(folders);
+        List<FolderEntity> folders = folderService.getAllFolders(userOpt.get());
+        List<Link> links = folders.stream()
+                .map(folder -> WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(FolderController.class)
+                        .getFolder(folder.getId(), authUser)).withSelfRel())
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok().body(folders).header("Link", links.toString());
+    }
+
+    /**
+     * Hämtar en specifik mapp.
+     *
+     * @param id Mappens ID.
+     * @param authUser Den inloggade användaren.
+     * @return ResponseEntity med mappen om den hittas.
+     */
+    @GetMapping("/{id}")
+    public ResponseEntity<?> getFolder(@PathVariable Long id, @AuthenticationPrincipal OAuth2User authUser) {
+        if (authUser == null) {
+            return ResponseEntity.status(401).body("Du måste vara inloggad för att hämta en mapp.");
+        }
+
+        String username = authUser.getAttribute("name");
+        Optional<UserEntity> userOpt = userService.findByUsername(username);
+        if (userOpt.isEmpty()) {
+            return ResponseEntity.status(404).body("Användare ej hittad.");
+        }
+
+        Optional<FolderEntity> folderOpt = folderService.getFolderById(id, userOpt.get());
+        return folderOpt.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.status(404).body("Mapp ej hittad."));
+    }
+
+    /**
+     * Raderar en mapp om den tillhör användaren.
+     *
+     * @param id Mappens ID.
+     * @param authUser Den inloggade användaren.
+     * @return ResponseEntity med statusmeddelande.
+     */
+    @DeleteMapping("/{id}")
+    public ResponseEntity<String> deleteFolder(@PathVariable Long id, @AuthenticationPrincipal OAuth2User authUser) {
+        if (authUser == null) {
+            return ResponseEntity.status(401).body("Du måste vara inloggad för att radera mappar.");
+        }
+
+        String username = authUser.getAttribute("name");
+        Optional<UserEntity> userOpt = userService.findByUsername(username);
+        if (userOpt.isEmpty()) {
+            return ResponseEntity.status(404).body("Användare ej hittad.");
+        }
+
+        boolean deleted = folderService.deleteFolder(id, userOpt.get());
+        if (deleted) {
+            return ResponseEntity.ok("Mappen har raderats.");
+        } else {
+            return ResponseEntity.status(404).body("Mappen kunde inte hittas eller tillhör inte dig.");
+        }
     }
 }
